use block_current_stream work api
Summary:
use block_current_stream to avoid blocking the cpu when using gloo

Test Plan:
## Before

<img width="1285" height="667" alt="image" src="https://github.com/user-attachments/assets/082b55ce-efac-46f8-adba-df92ffec864f" />

## After

<img width="1283" height="662" alt="image" src="https://github.com/user-attachments/assets/923bcc7b-740a-43d8-baed-19e3d77a7889" />

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,6 +27,7 @@ jobs:
           lintrunner init
 
           pip install .[dev] -v
+          pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu128
       - name: Run lintrunner
         run: |
           set -eux
