--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -26,6 +26,7 @@ jobs:
           pip install lintrunner lintrunner-adapters
           lintrunner init
 
+          pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu128
           pip install .[dev] -v
       - name: Run lintrunner
         run: |
