ProcessGroupNCCL: always eager init to avoid duplicate communicators for p2p ops (#242)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,12 +24,12 @@ Issues = "https://github.com/pytorch/torchft/issues"
 dev = [
     "pytest==8.3.4",
     "pytest-timeout",
-    "black",
-    "pyre-check",
     "parameterized",
     "expecttest",
     "numpy",
-    "torchx"
+    "torchx",
+    "lintrunner",
+    "lintrunner-adapters",
 ]
 
 [tool.maturin]
