--- a/.lintrunner.toml
+++ b/.lintrunner.toml
@@ -1,5 +1,61 @@
 [[linter]]
-code = 'BLACK-ISORT'
+code = 'CLANGFORMAT'
+include_patterns = [
+    '**/*.proto',
+]
+exclude_patterns = []
+command = [
+    'python',
+    '-m',
+    'lintrunner_adapters',
+    'run',
+    'clangformat_linter',
+    '--binary=clang-format',
+    '--fallback',
+    '--',
+    '@{{PATHSFILE}}'
+]
+init_command = [
+    'python',
+    '-m',
+    'lintrunner_adapters',
+    'run',
+    'pip_init',
+    '--dry-run={{DRYRUN}}',
+    'clang-format==18.1.3',
+]
+
+[[linter]]
+code = 'UFMT'
+include_patterns = [
+    '*.py',
+    '**/*.py',
+    '**/*.pyi',
+]
+exclude_patterns = []
+command = [
+    'python',
+    '-m',
+    'lintrunner_adapters',
+    'run',
+    'ufmt_linter',
+    '--',
+    '@{{PATHSFILE}}'
+]
+init_command = [
+    'python',
+    '-m',
+    'lintrunner_adapters',
+    'run',
+    'pip_init',
+    '--dry-run={{DRYRUN}}',
+    'black==24.4.2',
+    'ufmt==2.6.0',
+    'usort==1.0.5',
+]
+
+[[linter]]
+code = 'FLAKE'
 include_patterns = [
     '*.py',
     '**/*.py',
@@ -10,8 +66,8 @@ command = [
     '-m',
     'lintrunner_adapters',
     'run',
-    'black_isort_linter',
-    '--fast',
+    'flake8_linter',
+    '--config=.flake8',
     '--',
     '@{{PATHSFILE}}',
 ]
@@ -22,8 +78,17 @@ init_command = [
     'run',
     'pip_init',
     '--dry-run={{DRYRUN}}',
-    'black==24.10.0', # Use 24.x when ruff styles are updated
-    'isort==5.13.2',
+    'flake8==7.3.0',
+    'flake8-bugbear==24.12.12',
+    'flake8-comprehensions==3.16.0',
+    'flake8-executable==2.1.3',
+    'flake8-logging-format==2024.24.12',
+    'flake8-pyi==25.5.0',
+    'flake8-simplify==0.22.0',
+    'mccabe==0.7.0',
+    'pycodestyle==2.14.0',
+    'pyflakes==3.4.0',
+    'torchfix==0.4.0 ; python_version >= "3.10" and python_version < "3.13"',
 ]
 is_formatter = true
 
@@ -34,10 +99,7 @@ include_patterns = [
 ]
 command = [
     'python',
-    '-m',
-    'lintrunner_adapters',
-    'run',
-    'rustfmt_linter',
+    'tools/linter/adapters/rust_linter.py',
     '--binary=rustfmt',
     '--config-path=.rustfmt.toml',
     '--',
