--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,20 @@ module-name = "torchft._torchft"
 torchft_lighthouse = "torchft._torchft:lighthouse_main"
 
 [tool.isort]
+extra_standard_library = ["typing_extensions"]
+skip_gitignore = true
+atomic = true
+profile = "black"
+indent = 4
+line_length = 88
+lines_after_imports = 2
 multi_line_output = 3
+include_trailing_comma = true
 combine_as_imports = true
+
+[tool.black]
+target-version = ["py312"]
+include = '\.pyi?$'
 
 [tool.pytest.ini_options]
 log_format = "%(asctime)s %(levelname)s %(message)s"
